# 01_calibrate_robot

./: .clang-format  .gitignore  CMakeLists.txt
modules/aubo/: CMakeLists.txt
modules/aubo/include/: modern_robotics.h  vp_robot_aubo_robots.h
modules/aubo/src/: modern_robotics.cpp  vp_robot_aubo_robots.cpp
modules/pybind/: CMakeLists.txt
modules/pybind/include/: arrays.hpp
modules/pybind/src/: aubo_sdk.cpp  example.cpp
modules/test/: CMakeLists.txt
modules/test/src/: aubo_api_test.cpp  main.cpp  test_joint_broacast.cpp  test_modern_robotics.cpp  test_modern_robotics_feedback.cpp  test_send_pos_data.cpp  test_servoj.cpp  test_tcp2canbus.cpp  test_tcp2canbus_callback.cpp  test_tcp2canbus_feedback.cpp  test_tcp2canbus_notify.cpp  test_tcp2canbus_pure.cpp  test_tcp2canbus_thread_write.cpp  test_veloctiy_control.cpp  test_vp_robot_aubo.cpp
python/: _02_dataset_collect.py  _03_eye_to_hand _cube.py  _05_ax_zb_eye_to_hand_calibrate_chessboard.py  _05_eye_to_hand_calibrate_chessboard.py  _06_error_show.py  _07_dataset_show.py  aruco_code.py  camera.py  chess_board.py  chess_board_pose.py  eye_in_hand_calibrate.py  eye_to_hand_calibrate.py  generate_trajectory.py  pybind_test.py  realsense_camera.py  run.py
python/_01_dataset_collect/: _01_camera_calibration.py  _02_dataset_collect.py  _03_eye_to_hand .py  _03_eye_to_hand_ copy.py  _04_eye_to_hand_total_pose.py  _04_tcp_calibrate.py  _05_ax_zb_eye_to_hand_calibrate_chessboard.py  _05_eye_to_hand_calibrate_chessboard.py  _06_error_show.py  aruco_code.py  camera.py  camera_preview.py  chess_board_pose.py  eye_in_hand_calibrate.py  eye_in_hand_old.py  eye_to_hand_calibrate.py  eye_to_hand_calibrate_test.py
python/_01_dataset_collect/dataset_collect/: inout.py
python/_01_dataset_collect/model/: 000000.mtl  000000.ply  000000_points.txt
python/_01_dataset_collect/opengl_utils/: OffScreenRender.py  camera.py  glutils.py  mesh.py  model.py  shader_utils.py
python/_01_dataset_collect/opengl_utils/shaders/: 3.3.shader.fs  3.3.shader.vs  AntiEdgeNormal_fragment.fs  DNormal_fragment.fs  DNormal_vertex.vs  DebugEdge_fragment.fs  Depth_fragment.fs  Depth_vertex.vs  Edge_fragment.fs  Mask_fragment.fs  Normal_fragment.fs  Normal_vertex.vs  RGB_fragment.fs  position_ori_shader.fs  position_ori_shader.vs  position_shader.fs  position_shader.vs  rectangle_draw.fs
python/_02_aubo_param/: _01_pbvs.py  _02_run_robot.py  aubo_parm_export.py  read_plot.py  test_aubo_sdk.py  test_robot_pbvs.py
python/dataset_collect/: sample.py
python/oak/: 1_1oak_aquisition.py  calib_18443010E1073B1300.json  robot_cam.py
